# dtpipe

./: -  .editorconfig  .gitignore  CLAUDE.md  COOKBOOK.md  Directory.Build.props  Dockerfile  DtPipe.CI.slnf  DtPipe.sln  EXTENDING.md  LICENSE  QueryDump.sln  README.md  REFERENCE.md  benchmarks.ps1  benchmarks.sh  build.ps1  build.sh  build_datafusion_bridge.ps1  build_datafusion_bridge.sh  build_dtduck.sh  build_dtducksharp.sh  build_dtfusion.sh  build_dtpolars.sh  build_experimental.ps1  build_experimental.sh  dotnet-tools.json  list_parquet_types.csx  test_local.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
benchmarks/Apache.Arrow.Serialization.Benchmarks/: Apache.Arrow.Serialization.Benchmarks.csproj  Program.cs
docs/: EXTENDING.md
src/Apache.Arrow.Ado/: AdoConsumerFactory.cs  AdoToArrow.cs  AdoToArrowConfig.cs  AdoToArrowConfigBuilder.cs  AdoToArrowUtils.cs  Apache.Arrow.Ado.csproj  ArrowBinderFactory.cs  CompositeAdoConsumer.cs  IAdoConsumer.cs  IArrowBinder.cs  RecordBatchDataReader.cs
src/Apache.Arrow.Serialization/: Apache.Arrow.Serialization.csproj  ArrowDeserializer.cs  ArrowSerializer.cs
src/DtDuck/: Cargo.toml
src/DtDuck/src/: main.rs
src/DtDuckSharp/: DtDuckSharp.csproj  Program.cs
src/DtFusion/: Cargo.toml
src/DtPipe/: DtPipe.csproj  ExportService.cs  Program.cs
src/DtPipe.Adapters/: DtPipe.Adapters.csproj  README.md
src/DtPipe.Core/: DtPipe.Core.csproj  PipelineEngine.cs  README.md
src/DtPipe.Processors/: BranchArgParser.cs  DtPipe.Processors.csproj
src/DtPipe.Processors.DataFusion/: Cargo.toml
src/DtPipe.Processors.DataFusion/src/: context.rs
src/DtPipe.Sample/: DtPipe.Sample.csproj  Program.cs  nuget.config
src/DtPipe.Transformers/: DtPipe.Transformers.csproj
src/DtPipe.XStreamers/: DtPipe.XStreamers.csproj  DuckDbTest.cs
src/DtPipe.XStreamers.DataFusion/: Cargo.toml
src/DtPipe.XStreamers.DataFusion/src/: context.rs  lib.rs  runtime.rs
src/DtPolars/: Cargo.toml  test_lazy_ipc.rs
src/QueryDump/: ExportService.cs  Program.cs  QueryDump.csproj
test_inspect/: Program.cs  test_inspect.csproj
tests/Apache.Arrow.Serialization.Benchmarks/: Apache.Arrow.Serialization.Benchmarks.csproj  Models.cs
tests/Apache.Arrow.Serialization.Tests/: Apache.Arrow.Serialization.Tests.csproj  ComplexModels.cs  DynamicSerializationTests.cs  SerializationTests.cs
tests/DtPipe.Benchmarks/: ArrowAdoBenchmarks.cs  DtPipe.Benchmarks.csproj  FormatDataTransformerBenchmarks.cs  Program.cs  TypeConverterBenchmarks.cs
tests/DtPipe.Tests/: CliDagParserTests.cs  DtPipe.Tests.csproj  TestBatchBuilder.cs  duckdb_test_detail.txt  test_error.txt
tests/DuckDBArrowCheck/: DuckDBArrowCheck.csproj  Program.cs
tests/QueryDump.Benchmarks/: FormatDataTransformerBenchmarks.cs  Program.cs  (+1 more)
(+1125 files in other folders)
