[package]
name = "dtduck"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1", features = ["vtab-arrow", "appender-arrow", "bundled"] }
arrow = { version = "54", features = ["csv", "ipc"] }
arrow-ipc = { version = "54" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
