[package]
name = "dtpipe-datafusion"
version = "0.1.0"
edition = "2024"

[lib]
name = "dtpipe_datafusion"
crate-type = ["cdylib"]

[dependencies]
datafusion = { version = "53.0.0", features = ["sql"] }
arrow-array = { version = "58.1.0", features = ["ffi"] }
arrow-ipc = { version = "58.1.0" }
arrow-schema = { version = "58.1.0" }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
futures = "0.3.32"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.release-ci]
inherits = "release"
lto = "thin"
codegen-units = 16
opt-level = 2
strip = true
