[package]
name = "dtpipe_datafusion"
version = "1.2.4"
edition = "2024"
publish = false

[lib]
name = "dtpipe_datafusion"
crate-type = ["cdylib"]

[dependencies]
datafusion = { version = "=53.0.0", features = ["sql"] }
arrow = { version = "=58.1.0", features = ["ffi", "ipc"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time"] }
futures = "0.3.32"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.release-ci]
inherits = "release"
lto = "thin"
codegen-units = 16
opt-level = 2
strip = true
